# socoles-grader

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  abstract_syntax_tree.cpp  abstract_syntax_tree.h  admin.cpp  admin.h  config.h  config.h.in  goals.cpp  goals.h  grader.cpp  grader.h  model_query.cpp  model_query.h  my_duckdb.cpp  my_duckdb.h  my_evosql.cpp  my_evosql.h  my_postgresql.cpp  my_postgresql.h  process_queries.cpp  process_queries.h  query_engine.cpp  query_engine.h  server.cpp  server.h  sql_keywords.cpp  sql_keywords.h  student_query.cpp  student_query.h  test.cpp  thread_pool.cpp  thread_pool.h  tree_edit_distance.cpp  tree_edit_distance.h  utils.cpp  utils.h
backend/clauses/: alter_clause.cpp  alter_clause.h  assertion_clause.cpp  assertion_clause.h  common.cpp  common.h  create_clause.cpp  create_clause.h  create_view.cpp  create_view.h  delete_clause.cpp  delete_clause.h  insert_clause.cpp  insert_clause.h  update_clause.cpp  update_clause.h
backend/clauses/select/: from_clause.cpp  from_clause.h  group_by_clause.cpp  group_by_clause.h  having_clause.cpp  having_clause.h  order_by_clause.cpp  order_by_clause.h  select_clause.cpp  select_clause.h  where_clause.cpp  where_clause.h
backend/samples/: discography.sql  employees.sql  journal.sql  test_tables.sql
backend/test/: create_statements.h  create_view_statements.h  delete_statements.h  insert_clause.csv  insert_statements.h  update_statements.h
backend/test/grades/: create_query_grades.h  insert_query_grades.h
backend/test/output/: create_query_output.h  delete_query_output.h  insert_query_output.h  update_query_output.h
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: FileUploadBox.js  Grade.js  GradingOptions.js  Home.js  QueryOverview.js  Results.js  SnackbarAlert.js  UploadFiles.js  merge.js
frontend/src/testing/: 2_reference_queries.csv
